<resources>
    <string name="app_name">WeatherApp</string>
    <string name="appTitle">Weather</string>

    <string name="mainIcon"></string>
    <string name="mainTemperature">8°C</string>
    <string name="mainCountry">Pavlodar</string>
    <string name="mainWeather">Cloudy</string>

    <string name="windFlowNumber">78</string>
    <string name="windFlowIcon"></string>
    <string name="windFlowText">Wind flow</string>
    <string name="perceptionNumber">52</string>
    <string name="perceptionIcon"></string>
    <string name="perceptionText">Perception</string>
    <string name="humidityNumber">89</string>
    <string name="humidityIcon"></string>
    <string name="humidityText">Humidity</string>

    <string name="wednesday">Wednesday</string>
    <string name="wednesdayIcon"></string>
    <string name="wednesdayTemperature">22°C</string>
    <string name="wednesdayText">Fair</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tomorrowIcon"></string>
    <string name="tomorrowTemperature">13°C</string>
    <string name="tomorrowText">Smog</string>
    <string name="sunday">Sunday</string>
    <string name="sundayIcon"></string>
    <string name="sundayTemperature">14°C</string>
    <string name="sundayText">Cloudy</string>
    <string name="monday">Monday</string>
    <string name="mondayIcon"></string>
    <string name="mondayTemperature">15°C</string>
    <string name="mondayText">Cloudy</string>
    <string name="tuesday">Tuesday</string>
    <string name="tuesdayIcon"></string>
    <string name="tuesdayTemperature">14°C</string>
    <string name="tuesdayText">Little rain</string>

    <string name="region"></string>
    <string name="settings"></string>
    <string name="link"></string>
    <string name="home"></string>

    <string name="switchTextOn"></string>
    <string name="switchTextOff"></string>

</resources>