<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTemperature"
        android:textColor="@color/lightTextColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/weather_icons_regular"
        android:text="@string/mainIcon"
        android:textColor="@color/darkTextColor"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTemperature"
        android:textColor="@color/lightTextColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainCountry"
        android:textColor="@color/lightTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainWeather"
        android:textColor="@color/lightTextColor"
        android:textSize="30sp" />

</merge>
