<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/mainIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/weather_icons_regular"
        android:textColor="@color/darkTextColor"
        android:text="@string/mainIcon"
        android:textSize="100sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mainTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightTextColor"
        android:text="@string/mainTemperature"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/mainIcon"
        app:layout_constraintStart_toStartOf="@+id/mainIcon"
        app:layout_constraintEnd_toEndOf="@+id/mainIcon"/>

    <TextView
        android:id="@+id/mainCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightTextColor"
        android:text="@string/mainCountry"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/mainTemperature"
        app:layout_constraintStart_toStartOf="@+id/mainTemperature"
        app:layout_constraintEnd_toEndOf="@+id/mainTemperature"/>

    <TextView
        android:id="@+id/mainWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightTextColor"
        android:text="@string/mainWeather"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/mainCountry"
        app:layout_constraintStart_toStartOf="@+id/mainCountry"
        app:layout_constraintEnd_toEndOf="@+id/mainCountry"/>


</androidx.constraintlayout.widget.ConstraintLayout>